# mpt-crypto

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
.github/codeql/: README.md
.github/codeql/queries/: uncleansed-sensitive-data.ql
.github/scripts/: build-shared-lib.sh  build-wasm.sh  test-wasm.sh
.github/workflows/: build-client-lib-natives.yml  build-shared-libs.yml  build-wasm.yml  build.yml  test-s390x.yml
cmake/: Findsecp256k1.cmake  Install.cmake  mpt-crypto-config.cmake.in
conan/lockfile/: README.md  regenerate.sh
docs/: doxygen_crawl.html  index.html  navtreedata.js  navtreeindex0.js
docs/search/: all_1.js  all_2.js  all_8.js  all_9.js  all_a.js  searchdata.js
include/: bsgs_dlp.h  mpt_msm.h  mpt_protocol.h  secp256k1_mpt.h
include/utility/: mpt_utility.h
paper/: cmpt-compact-sigma.tex
src/: bsgs_dlp.c  bulletproof.c  bulletproof_aggregated.c  commitments.c  elgamal.c  equality_proof.c  mpt_internal.h  mpt_scalar.c  proof_compact_clawback.c  proof_compact_convert.c  proof_compact_convertback.c  proof_compact_standard.c  proof_link.c  proof_pok_sk.c  proof_same_plaintext.c  proof_same_plaintext_multi.c  proof_same_plaintext_multi_shared_r.c
src/utility/: mpt_internal.h  mpt_utility.cpp
tests/: CMakeLists.txt  bench_compact_sigma.c  test_bsgs_dlp.c  test_bulletproof_agg.c  test_bulletproof_batch.c  test_commitments.c  test_compact_convert.c  test_compact_convertback.c  test_compact_standard.c  test_ct_tweak_mul.c  test_elgamal.c  test_ipa.c  test_mpt_msm.c  test_mpt_utility.cpp  test_pok_sk.c  test_same_plaintext_multi_shared_r.c  test_utils.h
tools/: confidential_utility.cpp
